--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "license": "ISC",
     "devDependencies": {
         "@types/node": "^14.14.14"
+    },
+    "dependencies": {
+        "chalk": "^4.1.0"
     }
 }
