--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/node": "^14.14.14"
     },
     "dependencies": {
-        "chalk": "^4.1.0"
+        "chalk": "^4.1.0",
+        "cli-table": "^0.3.4"
     }
 }
