feat: add staging command

--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,17 @@
         "quotes": [
             "error",
             "single",
-            { "avoidEscape": true, "allowTemplateLiterals": true }
+            { "avoidEscape": true, "allowTemplateLiterals": true },
+            {
+                "no-unused-vars": [
+                    "error",
+                    {
+                        "vars": "all",
+                        "args": "all",
+                        "ignoreRestSiblings": false
+                    }
+                ]
+            }
         ]
     }
 }
