--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "Arsalan Khattak",
     "license": "ISC",
     "devDependencies": {
+        "@types/cli-table": "^0.3.0",
         "@types/node": "^14.14.14",
         "@typescript-eslint/eslint-plugin": "^4.12.0",
         "@typescript-eslint/parser": "^4.12.0",
