--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "git-bot",
+    "name": "@khattakdev/gitbot",
     "version": "1.0.0",
     "description": "A CLI Based Application to help you learn Git and GitHub.",
     "main": "index.js",
