fix: ignore .todo

--- a/.gitignore
+++ b/.gitignore
@@ -108,6 +108,8 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
+
+
 # yarn v2
 .yarn/cache
 .yarn/unplugged
@@ -117,4 +119,5 @@ dist
 
 # VSCode extensions
 todo
+.todo
 empty
