--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "git-bot",
-    "version": "1.0.0",
+    "name": "@khattakdev/gitbot",
+    "version": "1.1.1",
     "description": "A CLI Based Application to help you learn Git and GitHub.",
     "main": "index.js",
     "bin": {
