--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@khattakdev/gitbot",
-    "version": "1.1.5",
+    "version": "1.1.6",
     "description": "A CLI Based Application to help you learn Git and GitHub.",
     "main": "index.js",
     "bin": {
@@ -22,5 +22,9 @@
     "dependencies": {
         "chalk": "^4.1.0",
         "cli-table": "^0.3.4"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/khattakdev/gitbot"
     }
 }
